Fixed overflow CSS

--- a/style/style.css
+++ b/style/style.css
@@ -37,7 +37,8 @@ main {
 
 fieldset {
     display: flex;
-    width: 100%; height: fit-content;
+    width: 100%;
+    height: fit-content;
     padding: 1rem;
     gap: 1rem;
     border: none;
@@ -82,11 +83,14 @@ input[type=text]:focus {
 .json-fields-zone {
     gap: 0;
     flex-direction: column;
+    max-width: 100%;
 }
 .json-fields {
     display: flex;
     gap: 1rem;
     align-items: center;
+    flex-wrap: wrap;
+    max-width: 100%;
 }
 
 .jsfield, .jsmap {
@@ -151,10 +155,13 @@ input[type=text]:focus {
 
 .preview {
     display: flex;
+    flex-direction: column;
     gap: 1rem;
+    max-width: 100%;
 }
 .preview fieldset {
     display: block;
+    max-width: 100%;
 }
 .preview pre {
     width: 100%;
@@ -163,4 +170,5 @@ input[type=text]:focus {
     border: .125rem solid #753;
     background: #210;
     color: #EDC;
+    white-space: pre-wrap;
 }
